--- a/style.css
+++ b/style.css
@@ -39,10 +39,18 @@ li:hover {
   background-color: #20b2aa;
   border: 3px dotted #3a7999;
 }
+
 img {
+  position: relative;
   max-width: 100%;
   float: right;
-  z-index: -1px;
+  z-index: -15px;
+  bottom: 650px;
+  border-style: dotted;
+  border-width: 15px;
+  border-bottom: 20px;
+  border-right: 20px;
+  border-color: #20b2aa; 
 }
 .ListContainer {
   color: rgba(0, 255, 0, 0.75);
@@ -69,17 +77,7 @@ h2.sticky {
 
 /* Ole St.Neck image */
 
-.neck {
-	position: fixed;
-    float: right;
-    bottom: 10px;
-    right: 2px;
-    width: 400px;
-    height: 450px;
-    border-top: 8px dotted #73AD21;
-    border-right: 8px dotted #73AD21;
-    max-width: 100%;
-}
+
 
 /* Links */
 
